<resources>
    <string name="app_name">DecideIT</string>
    <string name="AppTitle">Student Voting Application</string>
    <string name="LogoDescription">Logo of the application.\nSource: KOrganizer from the default KDE Breeze icon theme.</string>
    <string name="usernameEditHint">Enter username</string>
    <string name="passwordEditHint">Enter password</string>
    <string name="LoginButtonText">Login</string>
    <string name="LoginFailedToast">Login failed! Invalid username and/or password!</string>
    <string name="RegistrationDescription">If you do not have an account, please register here:</string>
    <string name="RegisterButtonText">Register</string>
    <string name="RegistrationUsername">Enter username</string>
    <string name="RegistrationIndex">Enter index number</string>
    <string name="RegistrationName">Enter name</string>
    <string name="RegistrationPassword">Enter password</string>
    <string name="ProfileButton">Profile</string>
    <string name="CalendarButton">Calendar</string>
    <string name="ProfileTextPrefix">Hello %s</string>
    <string name="SessionText">Session %d</string>
    <string name="DescriptionText">Description:\n%s\n</string>
    <string name="SessionDateText">Date: %s</string>
    <string name="TimeLeftText">Time left to vote: %d day%s left</string>
    <string name="VoteYes">Yes</string>
    <string name="VoteNo">No</string>
    <string name="VoteAbstain">Abstain</string>
    <string name="sessionListPlaceholder">Session list placeholder</string>
    <string name="studentListPlaceholder">Student list placeholder</string>
    <string name="StudentsText">Students</string>
    <string name="SessionsText">Sessions</string>
    <string name="StudentPhotoDescription">Student photo</string>
    <string name="EmptyListIndicator">Empty List!</string>
    <string name="DeleteConfirmationTitle">Delete Item</string>
    <string name="DeleteConfirmationText">Are you sure you want to delete this item?</string>
    <string name="SubmitButton">Submit</string>
    <string name="SessionPast">Past</string>
    <string name="SessionUpcoming">Upcoming</string>
    <string name="VotedYES">Voted YES: %d</string>
    <string name="VotedNO">Voted NO: %d</string>
    <string name="VotedABSTAIN">Voted ABSTAIN: %d</string>
    <string name="RegistrationSurname">Enter surname</string>
    <string name="RegistrationFailedEmptyEntry">Cannot register with an empty %s!</string>
    <string name="RegistrationSuccess">Registration successful!</string>
    <string name="SessionFormName">Name:</string>
    <string name="SessionFormDescription">Description:</string>
    <string name="SessionFormError">Can\'t create a session with an empty name!</string>
    <string name="SessionFormExistsError">Session with this name already exists for this date!</string>
    <string name="VoteEnded">Voting period has ended</string>
    <string name="VoteConfirmTitle">Confirm vote decision</string>
    <string name="VoteConfirmBody">Once you confirm, you won\'t be able to vote again for this session!</string>
    <string name="VoteError">Invalid vote decision!</string>
    <string name="AlreadyVoted">You already voted!</string>
    <string name="VoteResultsError">Problem with fetching votes!</string>
    <string name="LoadingPlaceholder">Loading...</string>

    <string name="NotificationName">DecideIT</string>
    <string name="NotificationDesc">Student Voting Platform</string>
    <string name="NotificationTitle">The following sessions will expire in 15 minutes</string>

</resources>