<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentViewActivity">

    <ImageView
        android:id="@+id/appLogo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/LogoDescription"
        app:srcCompat="@drawable/logo" />

    <FrameLayout
        android:id="@+id/fragmentLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:onClick="onProfileClicked"
            android:text="@string/ProfileButton"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/calendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:onClick="onCalendarClicked"
            android:text="@string/CalendarButton"
            tools:ignore="ButtonStyle,TextContrastCheck" />
    </LinearLayout>
</LinearLayout>