<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <ImageView
        android:id="@+id/appLogo5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/LogoDescription"
        android:paddingTop="@dimen/LogoPadding"
        android:paddingBottom="@dimen/LogoPadding"
        app:srcCompat="@drawable/logo" />


    <FrameLayout
        android:id="@+id/fragmentLoader2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/studentsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:onClick="onStudentsClicked"
            android:text="@string/StudentsText"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/sessionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:onClick="onSessionsClicked"
            android:text="@string/SessionsText"
            tools:ignore="ButtonStyle,TextContrastCheck" />
    </LinearLayout>


</LinearLayout>